[package]
name = "redis-rust"
version = "0.1.0"
authors = ["Damian Kolaska <damian.kolaska99@gmail.com>"]

[dependencies]
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
thiserror = "1.0.32"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
mio = { version = "0.8.8", features = ["os-poll", "net"]}
